# vector-db-core

./: .gitignore  Cargo.toml  crates-io.md  license  pyproject.toml  readme.md
.github/workflows/: CI.yml
src/: cached_file_access_service.rs  database_with_cache.rs  dynamic_manager.rs  dynamic_vector_manage_service.rs  file_access_service.rs  lib.rs  object_persist_on_disk_service.rs  static_vector_manage_service.rs  string_repository.rs  vector_engine.rs
src/cache/: mod.rs  readable_cache.rs  writable_cache.rs
src/database_with_cache/: mod.rs  readable_cache.rs  writable_cache.rs
src/services/: dynamic_vector_manage_service.rs  file_access_service.rs  mod.rs  object_persist_on_disk_service.rs  static_vector_manage_service.rs  string_repository.rs
tests/: .gitignore  Cargo.toml
tests/tests/: cache_engine_performance_test.rs  cache_performance_test.rs  database_with_cache_performance_test.rs  dynamic_performance_test.rs  engine_performance_test.rs  lib.rs  mix_data_test.rs  sample_data_test.rs  static_performance_test.rs  vector_macro_test.rs  vector_performance_test.rs
tools/dynamic-vector/: Cargo.toml
tools/dynamic-vector-macro/: Cargo.toml
tools/dynamic-vector-macro/src/: lib.rs
tools/dynamic-vector/src/: lib.rs  traits.rs
