[package]
name = "vector-db-core"
version = "0.1.0"
edition = "2021"
authors = ["Hal Articode <halarticode@aiursoft.tech>"]
categories = ["database"]
description = "A high-performance vector database core for reading and writing historical records such as logs and chat records"
keywords = ["vector", "database", "history", "log"]
license = "mit"
repository = "https://github.com/tianzeshi-study/vector-db-core"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "vector_db_core"
# crate-type = ["cdylib"]

[dependencies]
bincode = "1.3.3"
rayon = "1.10.0"
serde ={version="1.0.213", features = ["derive"] }
dynamic-vector = {path ="./tools/dynamic-vector"} 
serde_json = "1.0.132"
