[package]
name = "vector-db-core"
version = "0.1.111"
edition = "2021"
authors = ["Hal Articode <halarticode@aiursoft.tech>"]
categories = ["database"]
description = "A high-performance vector database core for reading and writing historical records such as logs and chat records"
keywords = ["vector", "database", "history", "log"]
license = "MIT"
repository = "https://github.com/tianzeshi-study/vector-db-core"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "vector_db_core"
# crate-type = ["cdylib"]

[dependencies]
bincode = "1.3.3"
rayon = "1.10.0"
serde ={version="1.0.213", features = ["derive"] }
serde_json = "1.0.132"
# dynamic-vector = {path ="./tools/dynamic-vector"} 
