[package]
name = "vector-db-tests"
version = "0.1.0"
edition = "2021"
# license = { workspace = true }
# publish = false
autotests = false

[[test]]
harness = true
name = "integration_tests"
path = "tests/lib.rs"



[dependencies]
vector-db-core = {path =".."} 
serde = "1.0.214"
# dynamic-vector-macro = {path ="../tools/dynamic-vector-macro"} 