[package]
name = "vector-db-tests"
version = "0.1.0"
edition = "2021"
# license = { workspace = true }
# publish = false
autotests = false

[[test]]
harness = true
name = "integration_tests"
path = "tests/lib.rs"



[dependencies]
vector-db-core = {path =".."} 
serde = {version = "1.0.214", features = ["derive", "alloc", "unstable"] }
# serde = { version = "1.0.127", features = ["derive", "array"] }
chrono = {version = "0.4.38", features = ["serde"] }
uuid = {version = "1.11.0", features = ["serde"] }
sha2 = "0.10.8"
blake2 = "0.10.6"
# dynamic-vector-macro = {path ="../tools/dynamic-vector-macro"} 