[package]
name = "dynamic-vector-macro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "dynamic_vector_macro"
# crate-type = ["cdylib"]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.89"
quote = "1.0.37"
rayon = "1.10.0"
serde ={version="1.0.213", features = ["derive"] }
syn = "2.0.85"
# dynamic-vector = {path ="../dynamic-vector"} 